--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <title>french place</title>
   </head>
-  <body>
+  <body style="background-image:url('res/ironic.jpg');">
+    <div style="position:sticky;top:0;width:100%">
+      <img src="res/cooltitle.jpg" alt="Oh non! Notre jpeg! C'est cassé!" title="foutre" width="100%">
+    </div>
+    <p>sample text</p>
+    <a href="/menu.htm">shop now</a>
   </body>
 </html>
