--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
+<!--ta mère-->
 <html>
   <head>
     <title>french place</title>
+    <link rel="icon" type="image/jpeg" href="res/ironic.jpeg">
   </head>
   <body style="background-image:url('res/ironic.jpg');">
     <div style="position:sticky;top:0;width:100%">
       <img src="res/cooltitle.jpg" alt="Oh non! Notre jpeg! C'est cassé!" title="foutre" width="100%">
     </div>
-    <p>sample text</p>
-    <a href="/menu.htm">shop now</a>
+    <p>bienvenue à ouiui ! le café le plus cool de tous les temps ! aimé par ta maman.</p>
+    <a href="/menu.htm">acheter de la merde<img src="res/arrowr.jpg"></a>
+    <div style="position:fixed;bottom:0;right:0;background-color:white;">
+      <a href="https://twitter.com/whotookelburg">fait par un putain d'idiot bisexuel</a>
+    </div>
   </body>
 </html>
